tests/bad/badcall.alp
function int add(int x, int y):
    return x+y
end

function void main(<string> args):
    add(1.0, 2)
end
